--- a/data_partners.qmd
+++ b/data_partners.qmd
@@ -6,7 +6,7 @@ format:
      df-print: paged
 ---
 
-## Exploring Partnership Events
+## Exploring Partnership Events {#sec-partners}
 
 ```{r}
 #| warning: false
