--- a/references.bib
+++ b/references.bib
@@ -188,5 +188,17 @@
   publisher = {Springer},
   doi = {10.1007/BF02755992}
 },
+@article{MacKinlay1997,
+  title = {Event Studies in Economics and Finance},
+  author = {MacKinlay, A. Craig},
+  journal = {Journal of economic literature},
+  volume = {35},
+  number = {1},
+  year = {1997},
+  pages = {13–39},
+  issn = {0022-0515},
+  url = {https://uoelibrary.idm.oclc.org/login?url=https://www.proquest.com/scholarly-journals/event-studies-economics-finance/docview/213164851/se-2}
+},
+
 
 #Hierarchical modeling and analysis for spatial data
