--- a/model_mixed.qmd
+++ b/model_mixed.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Market Model"
+title: "Mixed Model"
 format: html
 ---
 
@@ -9,60 +9,44 @@ format: html
 source('functions.R')
 ```
 
-To determine the normal return we can adopt the market model [@MacKinlay1997]
-$$
-D_{it} = \alpha_i + \beta_i D_{gt} + \epsilon_{it}
-$$
-
-And the AR is 
-$$
-AR_{it} = D_{it} – (\alpha_i + \beta_i D_{gt})
-$$
-
-Where:
-
-$D_{it}$ is *`r credit_card.target_label()`* (differenced) $i$ at time $t$, \
-$\alpha_i$ is the firm-specific intercept, \
-$\beta_i$ is the sensitivity of firm value $i$ to the group $g$,\
-$D_{gt}$ is the group *`r credit_card.target_label()`* (differenced) at time $t$, and
-$\varepsilon_{it}$ is the error term for $i$ at time $t$.
-
+To determine the normal return we can adopt a mixed model 
 ## Model Summary
 
 ```{r}
 #| warning: false
-install.packages("gt")
+
+#install.packages("broom.mixed")
+library(broom.mixed)
+library(lme4)
 library(gt)
-data <- get_model_data() |> drop_na(UBPRE524.diff)
+data <- get_model_data() |> drop_na(UBPRE524.diff)|> mutate(Qtr = quarter(Quarter), Year = year(Quarter))
 
 estimation_data <- data |> filter(is.na(Partnership)) |> fill_gaps()
 observation_data <- data |> filter(!is.na(Partnership))
 
-results <- tibble(model = character(),
-                    rsme = numeric())
 
-market_formula <- "UBPRE524.diff ~ UBPRE524.group.diff"
-m_table <- estimation_data |> fabletools::model(tslm = TSLM(as.formula(market_formula)))
+# lmer1_formula <- "value_diff  ~ Qtr + RRSFS.Pop + RRSFS.Pop.lag1 + (1 | IDRSSD)"
+# lmer2_formula <- "value_diff  ~ Qtr + RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (1 | IDRSSD)"
+# lmer3_formula <- "value_diff  ~ Qtr + RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (1 | BankType/IDRSSD)"
+lmer4_formula <- "UBPRE524.diff  ~ (1 + Year + Qtr | BankType/BankName)  + UBPRE524.group.pct_change + UBPRE524.all.pct_change + RRSFS.Pop.pct_change + RRSFS.Pop.pct_change.lag1 + UBPRB538.pct_change + UBPRE263.pct_change + UNRATE.pct_change + UNRATE.pct_change.lag1"
+# lmer5_formula <- "value_diff  ~ Qtr + value_diff.group.mean + (1 | IDRSSD)"
+# lmer6_formula <- "value_diff  ~ Qtr + value_diff.group.mean + (1 | BankType)"
+# lmer7_formula <- "value_diff  ~ Qtr + value_diff.median + (1 | BankType)"
+# lmer8_formula <- "value_diff  ~ Qtr + value_diff.group.mean + (1 | IDRSSD) + RRSFS.Pop + RRSFS.Pop.lag1"
+# lmer9_formula <- "value_diff.detrend  ~ RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1 + (1 | IDRSSD)"
 
-m_table |> 
-  tidy() |> 
-    mutate(across(where(is.numeric), round, 2)) |> 
-      rmarkdown::paged_table()
+best_model <- lmer(as.formula(lmer4_formula), data = estimation_data)
+summary(best_model)
+
 ```
 
-```{r}
-m_table |> 
-  tidy() |> 
-    mutate(across(where(is.numeric), round, 2)) |> 
-      gt()
-```
 
 ```{r}
 #| warning: false
 #| label: fig-plot-fit
 #| fig-cap: "Fitted vs. Observed for estimation data on sub-set of firms"
 
-augmented_data <- m_table |> augment()
+augmented_data <- best_model |> broom::augment() |> mutate(Quarter = yearquarter(paste0(Year," Q", Qtr))) |> as_tsibble(index = Quarter, key = c(BankType,BankName))
 
 augmented_data |> filter(BankName %in% unique(observation_data$BankName)) |>
         autoplot(UBPRE524.diff, colour = "darkgrey") + 
@@ -85,25 +69,23 @@ augmented_data |> filter(BankName %in% unique(observation_data$BankName)) |>
 #|   - "Q-Q Residuals - the S shape indicates residuals have heavier tails than expected normal distribution"
 #|   - "Scale-Location - slight funnel shape indicates heteroscedasticity i.e. violates linear assumption of equal variance"
 
-m_table |> fabletools::accuracy()
+#values are autocorrelated. If the p-value > 0.05 (good), this implies that the residuals of the data are are independent.
+#augmented_data |> features(.innov, ljung_box) |> filter(lb_pvalue <= 0.05)
+plot(best_model)
+hist(resid(best_model))
+
+install.packages("sjPlot")
+library(sjPlot)
+sjPlot::plot_model(best_model)
+sjPlot:: tab_model(best_model)
 
 augmented_data|> 
-  ggplot(aes(x = UBPRE524.diff, y = .fitted)) +
+  ggplot(aes(x =.fitted, y = UBPRE524.diff )) +
   geom_point() +
-        labs(y = "Fitted (predicted values)",
-             x = "Data (actual values)",) +
+        labs(y = "Data (actual values)",
+             x = "Fitted (predicted values)" ) +
         theme(legend.position = "none", plot.title = element_markdown(),plot.subtitle = element_markdown())+
-  geom_abline(intercept = 0, slope = 1, colour="red")
-  
-qqnorm(augmented_data$.fitted, pch = 1, frame = FALSE);qqline(augmented_data$.fitted, col = "steelblue", lwd = 2)
-
-augmented_data|> group_by(BankName) |> mutate(y = sqrt(abs(.fitted/sd(.fitted)))) |>
-  ggplot(aes(x = UBPRE524.diff, y = y)) +
-  geom_point() +
-        labs(y = "sqrt standardised residuals",
-             x = "Data (actual values)",) +
-        theme(legend.position = "none", plot.title = element_markdown(),plot.subtitle = element_markdown())
-        
+  geom_abline(intercept = 0,colour="red")
 
 ```
 
@@ -134,16 +116,6 @@ bar_est_data_tr <- bar_est_data |>
                     stretch_tsibble(.init = 3, .step = 1) |>
                     relocate( .id)
 
-far2_xreg <- function(x, h, xreg, newxreg) {
-  forecast(Arima(x, order=c(2,0,0), xreg=xreg), xreg=newxreg)
-}
-
-y <- ts(rnorm(50))
-xreg <- matrix(rnorm(100),ncol=2)
-e <- tsCV(y, far2_xreg, h=3, xreg=xreg)
-
-
-
 # TSCV accuracy
 bar_est_data_tr |>
   model(TSLM(as.formula(market_formula))) |>
@@ -155,11 +127,15 @@ bar_est_data |>
   model(TSLM(as.formula(market_formula))) |>
   fabletools::accuracy()
 
-google_2015_tr |>
-  model(RW(Close ~ drift())) |>
-  forecast(h = 1) |>
-  accuracy(google_2015)
-  
+estimation_data_tr <- estimation_data |>
+                      stretch_tsibble(.init = 3, .step = 1) |>
+                      relocate( .id)
+
+estimation_data_tr |>
+  model(TSLM(as.formula(market_formula))) |>
+  forecast(new_data = estimation_data_tr |> select(UBPRE524.group.diff)) |>
+  fabletools::accuracy(estimation_data)
+
 # selected_model <- m_table |> filter(grepl("BARCLAYS",BankName))
 # fabletools::glance(selected_model) |> arrange(selected_model) |> select(.model:BIC)
 
